# dalton

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt  flake.nix  main.cpp
documentation/: CMakeLists.txt
documentation/pages/: about.dox
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs  span.rs
frontend/src/lexer/: cursor.rs  error.rs  keywords.rs  mod.rs  token.rs
include/dalton/core/: diagnostics.hpp  location.hpp
include/dalton/lexer/: lexer.hpp  token.hpp
source/core/: diagnostics.cpp  location.cpp
source/lexer/: lexer.cpp  token.cpp
src/: main.cpp
src/core/: diagnostic.cpp  diagnostics.hpp  location.hpp
src/lexer/: lexer.hpp  token.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
